start to code conteudo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <body>
         <main>
             <header>
-                <h1>Título do Site</h1>
+                <h1>Cursos Grátis</h1>
             </header>
             <article>
-                <h2>Artigo 001</h2>
-                <p>Texto Artigo 001</p>
+                <h2>Curso de HTML5 com CSS3</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci explicabo nulla culpa unde impedit vel! Ratione vero architecto nesciunt sit maiores perferendis? Explicabo veritatis vero reiciendis cupiditate hic expedita nesciunt!</p>
             </article>
             <article>
-                <h2>Artigo 002</h2>
-                <p>Texto Artigo 002</p>
+                <h2>Curso de JavaScript</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis tenetur porro, reiciendis beatae debitis laudantium dolor odit voluptatem esse ab quam illum neque molestiae veniam pariatur suscipit blanditiis doloremque voluptatum.</p>
             </article>
         </main>
     </body>
