update course pages, css and index

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
                 <h2>Curso de HTML5 com CSS3</h2>
                 <img class="lado" src="imagens/curso-html-css.png" alt="Curso de HTML5 e CSS3">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci explicabo nulla culpa unde impedit vel! Ratione vero architecto nesciunt sit maiores perferendis? Explicabo veritatis vero reiciendis cupiditate hic expedita nesciunt!</p>
-                <p><a href="">Acesse o curso aqui</a></p>
+                <p><a href="curso-html.html">Acesse o curso aqui</a></p>
             </article>
             <article>
                 <h2>Curso de JavaScript</h2>
                 <img class="lado" src="imagens/curso-javascript.png" alt="Curso de JavaScript">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis tenetur porro, reiciendis beatae debitis laudantium dolor odit voluptatem esse ab quam illum neque molestiae veniam pariatur suscipit blanditiis doloremque voluptatum.</p>
-                <p><a href="">Acesse o curso aqui</a></p>
+                <p><a href="curso-js.html">Acesse o curso aqui</a></p>
             </article>
         </main>
     </body>
